# MarkdownViewer

./: .gitignore  README.md  package.json
src/: app.html  styles.css
src-tauri/: Cargo.toml  hooks.nsi  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  setup.rs
src/lib/: Installer.svelte  MarkdownViewer.svelte
src/lib/components/: HomePage.svelte  Tab.svelte  TabList.svelte  TitleBar.svelte
src/lib/stores/: tabs.svelte.ts
