[package]
name = "MarkdownViewer"
version = "1.0.0"
description = "A simple standalone markdown viewer-only app for Windows 11"
authors = ["o9"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
comrak = "0.12"
window-vibrancy = "0.5"
serde_json = "1"
tauri-plugin-prevent-default = "2.0.0-rc.1"
notify = "6"
